fixed video-player button on mobile

--- a/components/video-player.scss
+++ b/components/video-player.scss
@@ -16,6 +16,7 @@
 
   @include media("<desktop") {
      flex-direction: column;
+     z-index: 0;
   }
 
   &__text{
